--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-  font-size:2.5rem;
+  font-size:3rem;
 }
 
 h2 {
@@ -28,7 +28,7 @@ h2 {
 }
 
 h3 {
-  font-size:1.2rem;
+  font-size:1.5rem;
 }
 
 p {
@@ -58,6 +58,7 @@ ul {
   max-width:1180px;
   margin-inline:auto;
   padding-inline:var(--padding-inline-section);
+  overflow:hidden;
 }
 
 .flex {
@@ -83,6 +84,7 @@ ul {
   padding:12px 24px;
   box-shadow:0 0 2px var(--secondary-text-color);
   transition:0.2s ease-out;
+  text-align:center;
 }
 
 .primary-button:hover {
@@ -117,12 +119,13 @@ ul {
   text-align:center;
 }
 
-/* main nav */
+/* nav bar */
 
 .main-nav {
   margin-top:20px;
   justify-content:space-between;
   margin-bottom:50px;
+  position:relative;
 }
 
 .company-logo img {
@@ -137,6 +140,12 @@ ul {
   justify-content:end;
   gap:40px;
 }
+
+.nav-toggle {
+  display:none;
+}
+
+/* header section */
 
 .header {
   padding:50px var(--padding-inline-section) 0;
@@ -161,10 +170,10 @@ ul {
 }
 
 .header-right img {
-    width:500px;
+    width:100%;
 }
 
-/* companies sectioin */
+/* companies section */
 
 .companies-header {
   text-align:center;
@@ -173,8 +182,9 @@ ul {
 }
 
 .logos {
-  justify-content:space-between;
+  justify-content:space-evenly;
   flex-wrap:wrap;
+  gap:20px;
 }
 
 .logo {
@@ -192,6 +202,7 @@ ul {
 
 .features-header {
   text-align:center;
+  margin-bottom:40px;
 }
 
 .features-heading-text {
@@ -201,7 +212,7 @@ ul {
 .features-area {
   flex-wrap:wrap;
   justify-content:space-between;
-  gap:40px;
+  gap:20px;
   margin-top:20px;
 }
 
@@ -226,6 +237,10 @@ ul {
   gap:30px;
 }
 
+#second-big-feature {
+  flex-direction:row-reverse;
+}
+
 .feature-img img {
   width:100%;
 }
@@ -237,20 +252,26 @@ ul {
 
 /* examples section */
 
+.examples-section {
+  padding:80px var(--padding-inline-section);
+}
+
 .examples-header {
   flex-direction:column;
   gap:20px;
+  text-align:center;
 }
 
 .examples-area {
   justify-content:space-between;
   margin-block:30px;
+  flex-wrap:wrap;
 }
 
 .examples-card{
   width:23%;
   position:relative;
-  min-height:300px;
+  height:300px;
   background-color:black;
  }
 
@@ -293,6 +314,7 @@ ul {
   flex-direction:column;
   gap:30px;
   color:white;
+  text-align:center;
 }
 
 .cta-section {
@@ -335,4 +357,6 @@ footer {
 .subfooter-container {
   justify-content:center;
   gap:30px;
+  flex-wrap:wrap;
 }
+
